Truncate popup text to prevent super wide popup presentation
Former-commit-id: 8c66d5a4e50ef60406085a1dab349d25a93036c9

--- a/css/igv.css
+++ b/css/igv.css
@@ -141,6 +141,17 @@
     border-bottom-width: thin;
 }
 
+.igv-popover-table {
+    table-layout: fixed;
+    width: 256px;
+}
+
+.igv-popover-td {
+    white-space: nowrap;
+    overflow: hidden;         /* <- this does seem to be required */
+    text-overflow: ellipsis;
+}
+
 .igv-popoverName {
     font-weight: bold;
     padding-right: 4px;
